--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "@twilio-paste/core": "^10.14.0",
     "@twilio-paste/icons": "^5.7.0",
     "@twilio/flex-plugin-scripts": "5.1.2",
-    "@types/react": "^18.0.17",
-    "@types/twilio": "^3.19.3",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@twilio/flex-ui": "2.0.0-beta.1",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4"
+    "typescript": "^4",
+    "@types/react": "^18.0.17",
+    "@types/styled-components": "^5.1.26",
+    "@types/twilio": "^3.19.3"
   }
 }
