--- a/plugin/package.json
+++ b/plugin/package.json
@@ -10,6 +10,7 @@
     "@twilio-paste/icons": "^5.7.0",
     "@twilio/flex-plugin-scripts": "5.1.2",
     "@twilio/flex-ui": "2.0.0-beta.1",
+    "axios": "^0.27.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
