--- a/plugin/.env.example
+++ b/plugin/.env.example
@@ -1,4 +1,5 @@
 FLEX_APP_URL_FETCH_WORKERS=
 FLEX_APP_URL_FETCH_WORKSPACE=
 FLEX_APP_URL_CREATE_WORKER=
+FLEX_APP_URL_UPDATE_WORKER=
 FLEX_APP_URL_DELETE_WORKER=
